--- a/JobManagementApi/JobManagementApi.csproj
+++ b/JobManagementApi/JobManagementApi.csproj
@@ -16,5 +16,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JobManagementApi.Infrastructure\JobManagementApi.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
